# Terminal-Port-Crawler

./: .gitignore  LICENSE  README.md  SECURITY.md  WIKI.md  learn.md  pyproject.toml  run.py  tpc.spec
.github/: FUNDING.yml
tpc/: __init__.py  data.py  scanner.py  screens.py  utils.py
tpcscanner/: __main__.py
